added analytics, resume work and removed unused code.

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="Homepage to Jakob Manne, software developer working for Cutters.">
+    <meta name="keywords" content="Homepage, Cutters, Jakob Manne, Developer, Bergen, Software, utvikling">
+    <meta name="author" content="Jakob Manne">
+
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
